--- a/InterfazIT/InterfazIT/fonts/StylesReport.css
+++ b/InterfazIT/InterfazIT/fonts/StylesReport.css
@@ -1,13 +1,16 @@
 ﻿body {
-    background-color: #faeee9;
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 100%, rgba(0,212,255,1) 100%);
     font-family: 'Poppins', sans-serif;
-    text-align:center;
+    text-align: center;
     font-size: 20px;
+    
 }
 
 #lblTitulo{
     font-size: 25px;
     font-weight: bold;
+    color: #ffffff;
 }
 
 .inputs {
@@ -17,22 +20,43 @@
     border: 0;
     border-bottom: 2px solid #000000;
     outline: 0;
-    color: #000000;
+    color: #000;
     background: transparent;
+    font-size: 18px;
 }
 
 .submit-btn {
     background: transparent;
-    width: 125px;
-    height: 25px;
+    width: 135px;
+    height: 45px;
+    transition: ease 0.5s all;
+    font-size: 15px;
+}
+
+.submit-btn:hover {
+    background: #580F36;
+    color: #fff;
+    transition: ease 0.5s all;
 }
 
 .container {
     display: inline-block;
-    background: #ffffff;
+    background: #EEEEEE;
     border: solid 2px #000000;
     width: 600px;
     border-radius: 10px;
     padding: 20px;
+}
+
+.flex-container {
+    height: 98vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.input-container{
+    height: inherit;
 }
 
